--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link href="{{asset('css/bootstrap.min.css')}}" rel="stylesheet">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +15,50 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">GeoWizzard</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor02">
+      <ul class="navbar-nav me-auto">
+        {% if app.user %}
+
+        <li class="nav-item">
+            <a href="{{ path('app_logout') }}">Déconnexion</a>
+        </li>
+
+        <li>
+            <a href="{{ path('app_place_index') }}">Lieux</a>
+
+        </li>
+        {% else %}
+        <li class="nav-item">
+            <a href="{{ path('app_login') }}">Connexion</a> |
+        </li>
+        <li class="nav-item">
+            <a href="{{ path('app_register') }}">Inscription</a>
+        </li>
+        {% endif %}
+        
+      </ul>
+    </div>
+  </div>
+</nav>
+    <div>
+    </div>
+        {% if app.user %}
+            {% block body %}
+            {% endblock %}
+            {% else %}
+            <div class="text-center">
+                <h1>Bienvenue !</h1>
+            <p>Il semblerait que vous ne soyez pas connecté !</p>
+            <a href="{{ path('app_login') }}">Me connecter</a>
+            <h2>Nouveau ? <span><a href="{{ path('app_register') }}">Inscription</a></span></h2>
+            </div>
+        {% endif %}
+    
     </body>
 </html>
